--- a/compiler-lesson/package.json
+++ b/compiler-lesson/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "lite-server"
   },
   "author": "Achim Rutz",
-  "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "lite-server": "^2.6.1"
-  }
+  },
+  "license": "ISC"
 }
