--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,11 +16,11 @@
         "webRoot": "${workspaceFolder}/interfaces-classes"
       },
       {
-        "name": "Attach to Chrome",
-        "port": 9222,
-        "request": "attach",
-        "type": "chrome",
-        "webRoot": "${workspaceFolder}"
+        "name": "Launch advanced types (edge)",
+        "request": "launch",
+        "type": "pwa-msedge",
+        "url": "http://localhost:3000",
+        "webRoot": "${workspaceFolder}/adv-types"
       },
       {
         "name": "Launch typescript-nextgen",
